// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Localize > renders nothing without props 1`] = `
<body>
  <div>
    
  </div>
</body>
`;

exports[`Localize > renders string in user lang 1`] = `
<body>
  <div>
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
  </div>
</body>
`;

exports[`Localize > renders string in user lang with params in content lang 1`] = `
<body>
  <div>
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
  </div>
</body>
`;

exports[`Localize > renders string in user lang with params in content lang 2`] = `
<body>
  <div>
    
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
    
  </div>
</body>
`;

exports[`Localize > renders string in user lang with params in content lang 3`] = `
<body>
  <div>
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
    
  </div>
</body>
`;

exports[`Localize > renders string in user lang with params in content lang 4`] = `
<body>
  <div>
    
    <span
      lang="ab-CD"
    >
       
    </span>
    
    
  </div>
</body>
`;
